Add header and main structure to index.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,23 @@
     <title>Dev Jobs -Inicio</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header>
+        <h2>Dev Jobs</h2>
+        <nav>
+            <a href="">Inicio</a>
+            <a href="">Empleos</a>
+        </nav>
+        <div>
+            <a href="">Publicar un empleo</a>
+            <a href="">Iniciar sesión</a>
+        </div>
+
+    </header>
+    <main>
+        <section>
+            <img src="" alt="">
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
