Add job platform benefits section to index.html

--- a/index.html
+++ b/index.html
@@ -38,8 +38,35 @@
                 <input type="text" placeholder="Buscar empleo por Titulo, Habilidad o Empresa">
                 <button type="submit"> Buscar</button>
             </form>
-
-            </form>
+        </section>
+        <section>
+            <header>
+                <h2>Porque Devjobs?</h2>
+                <p>DevJobs es la principal plataforma de búsqueda de empleo para desarrolladores. Conectamos a los mejores
+          talentos con las empresas más innovadoras</p>
+            </header>
+            <article>
+                <h3>
+                    Encuentra el trabajo de tus sueños
+                </h3>
+                <p>Busca miles de empleos de las mejores empresas de todo el mundo</p>
+            </article>
+            <article>
+                <h3>
+                    Conecta con las mejores empresas
+                </h3>
+                <p>
+                    Conecta con empresas que están contratando por tus habilidades.
+                </p>
+            </article>
+            <article>
+                <h3>
+                    Obten el salario que mereces
+                </h3>
+                <p>
+                    obten el salario que mereces gracias a nuestras herramientas de negociacion salarial.
+                </p>
+            </article>
         </section>
     </main>
     <footer></footer>
